krunner: Fix query with clipboard contents on Wayland

On Wayland we cannot retrieve the clipboard contents unless we get the focus,
so let's just delay the request until we get it.

BUG: 451747
FIXED-IN: 6